<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.4</version>
        <relativePath/>
    </parent>

    <groupId>com.uniondesk</groupId>
    <artifactId>uniondesk-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>UnionDesk Parent</name>
    <description>UnionDesk 聚合父模块</description>

    <modules>
        <module>uniondesk-common</module>
        <module>uniondesk-iam</module>
        <module>uniondesk-domain</module>
        <module>uniondesk-ticket</module>
        <module>uniondesk-support</module>
        <module>uniondesk-app</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <flyway.version>11.7.2</flyway.version>
        <aws.sdk.version>2.29.45</aws.sdk.version>
        <jrebel.maven.plugin.version>1.2.1</jrebel.maven.plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 子模块 -->
            <dependency>
                <groupId>com.uniondesk</groupId>
                <artifactId>uniondesk-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.uniondesk</groupId>
                <artifactId>uniondesk-iam</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.uniondesk</groupId>
                <artifactId>uniondesk-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.uniondesk</groupId>
                <artifactId>uniondesk-ticket</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.uniondesk</groupId>
                <artifactId>uniondesk-support</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- 第三方 -->
            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>3.0.4</version>
            </dependency>
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-core</artifactId>
                <version>${flyway.version}</version>
            </dependency>
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-mysql</artifactId>
                <version>${flyway.version}</version>
            </dependency>
            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>s3</artifactId>
                <version>${aws.sdk.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
                        <forkCount>1</forkCount>
                        <reuseForks>true</reuseForks>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.zeroturnaround</groupId>
                    <artifactId>jrebel-maven-plugin</artifactId>
                    <version>${jrebel.maven.plugin.version}</version>
                    <configuration>
                        <addResourcesDirToRebelXml>true</addResourcesDirToRebelXml>
                    </configuration>
                    <executions>
                        <execution>
                            <id>generate-rebel-xml</id>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>generate</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
